fixed the shift selector on the header

--- a/app/styles-less/sections/events-list.less
+++ b/app/styles-less/sections/events-list.less
@@ -46,6 +46,9 @@
 
   .event-row{
     td{
+      &.name-col{
+        cursor:pointer;
+      }
       input{
         border:0;
         background: transparent;
