--- a/app/styles-less/sections/header.less
+++ b/app/styles-less/sections/header.less
@@ -235,7 +235,6 @@
 
             .shiftpicker-col{
               width:115px;
-              overflow:hidden;
               text-overflow: ellipsis;
               a{
 
